bug 1366517, because of XBL usage, limit not-flushing-always-during-focus() to non-chrome, r=ehsan

--HG--
extra : rebase_source : b41e3767a4038e3278f9c6aa2d8da447fe324ae4